Center questions correctly on IE11

--- a/angular/src/styles/questionnaire.scss
+++ b/angular/src/styles/questionnaire.scss
@@ -13,6 +13,7 @@
     & > * {
       display: block;
       position: absolute;
+      left: 50%;
       max-width: 100%;
     }
   }
